# pi-z2-driving-logger

./: .gitignore  .traccar.env.example  README.md  pyproject.toml
scripts/: export_semantic_trace.sh  install_deps.sh  install_systemd.sh  run_logger.sh  tail_latest.sh  traccar_curl_test.sh  traccar_export_test.sh  traccar_flush_once.sh  traccar_queue_status.sh  uninstall_systemd.sh
src/pi_z2_driving_logger/: __init__.py  __main__.py  config.py  feedback.py  gps.py  left_button.py  main.py  nmea.py  phat.py  postprocess.py  semantic_join.py  state_machine.py  storage.py  traccar.py  traccar_client.py  traccar_queue.py
systemd/: pi-z2-driving-logger.service
tests/: test_feedback_buzzer.py  test_feedback_led.py  test_left_button_gestures.py  test_nmea.py  test_postprocess.py  test_semantic_join.py  test_state_machine.py  test_traccar.py  test_traccar_client.py  test_traccar_queue.py  test_walk_poi_events.py
